--- a/3.TodoListApp-LocalStorage/index.html
+++ b/3.TodoListApp-LocalStorage/index.html
@@ -22,7 +22,7 @@
         <input type="text" id="todo-input" placeholder="Enter a new task">
         <button id="add-todo">Add Task</button>
         <ul id="todo-list">
-            <li class="todo-item" data-id='0'>
+            <!-- <li class="todo-item" data-id='0'>
                 <span class="completed">Learn HTML</span>
                 <button class="complete-btn">Undo</button>
                 <button class="delete-btn">Delete</button>
@@ -31,7 +31,7 @@
                 <span class="completed">Learn HTML</span>
                 <button class="complete-btn">Undo</button>
                 <button class="delete-btn">Delete</button>
-            </li>
+            </li> -->
         </ul>
     </div>
     <script src="main.js"></script>
